--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -119,9 +119,11 @@ header a:hover {
 
 /* newsletter*/
 #search {
+  height: 40px;
   padding:0 15px;
   color: #ffffff;
   background: #35424a;
+  border-bottom:#e8491d 3px solid; 
 }
 
 #search h3 {
@@ -156,7 +158,7 @@ section#boxes {
 #boxes .box img {
   width: 250px;
 }
-/* sidebar */
+/* sidebar
 aside#sidebar {
   float: right;
   width: 30%;
@@ -166,7 +168,7 @@ aside#sidebar {
 aside#sidebar .quote input, aside#sidebar .quote textarea {
   width: 90%;
   padding: 5px;
-}
+} */
 /* main-col */
 section#main {
   padding-bottom: 6%;
